@@ -92,7 +92,7 @@
 #define CONSHDLR_PROP_TIMING      SCIP_PROPTIMING_BEFORELP /**< propagation timing mask of the constraint handler */
 #define CONSHDLR_PRESOLTIMING     SCIP_PRESOLTIMING_ALWAYS /**< presolving timing of the constraint handler (fast, medium, or exhaustive) */
 
-#define QUADCONSUPGD_PRIORITY     10000 /**< priority of the constraint handler for upgrading of quadratic constraints */
+#define QUADCONSUPGD_PRIORITY     60000 /**< priority of the constraint handler for upgrading of quadratic constraints */
 
 #define UPGSCALE 10 /* scale factor used in general upgrades of quadratic cons to soc */
 
@@ -3119,7 +3119,6 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
 {
    int            nquadvars;
    int            nbilinterms;
-   SCIP_QUADVARTERM* term;
    SCIP_QUADVARTERM* quadterms;
    SCIP_BILINTERM* bilinterm;
    SCIP_VAR**     quadvars;
@@ -3164,21 +3163,22 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
    SCIPdebugMsg(scip, "upgradeConsQuadratic called for constraint <%s>\n", SCIPconsGetName(cons));
    SCIPdebugPrintCons(scip, cons, NULL);
 
-   /* currently do not support linear parts in upgrading of SOC constraints */
-   if( SCIPgetNLinearVarsQuadratic(scip, cons) > 0 )
+   /* currently do not support linear parts in upgrading of SOC constraints; binary vars we can treat as if squared */
+   if( ncontlin > 0 || nimpllin > 0 || nintlin > 0 )
       return SCIP_OKAY;
+   assert(SCIPgetNLinearVarsQuadratic(scip, cons) == nbinlin);
 
    nbilinterms = SCIPgetNBilinTermsQuadratic(scip, cons);
    nquadvars = SCIPgetNQuadVarTermsQuadratic(scip, cons);
 
    /* currently, a proper SOC constraint needs at least 3 variables */
-   if( nquadvars < 3 )
+   if( nbinlin + nquadvars < 3 )
       return SCIP_OKAY;
 
    /* reserve space */
-   SCIP_CALL( SCIPallocBufferArray(scip, &lhsvars,    nquadvars - 1) );
-   SCIP_CALL( SCIPallocBufferArray(scip, &lhscoefs,   nquadvars - 1) );
-   SCIP_CALL( SCIPallocBufferArray(scip, &lhsoffsets, nquadvars - 1) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &lhsvars,    nbinlin + nquadvars - 1) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &lhscoefs,   nbinlin + nquadvars - 1) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &lhsoffsets, nbinlin + nquadvars - 1) );
 
    /* initialize data */
    a = NULL;
@@ -3203,7 +3203,7 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
    }
 
    /* check hyperbolic part */
-   if ( nbilinterms == 1 )
+   if( nbilinterms == 1 && nbinlin == 0 )
    {
       bilinterm = SCIPgetBilinTermsQuadratic(scip, cons);
       bilinvar1 = bilinterm->var1;
@@ -3235,7 +3235,7 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
       quadterms = SCIPgetQuadVarTermsQuadratic(scip, cons);
       for (i = 0; i < nquadvars; ++i)
       {
-         term = &quadterms[i];
+         SCIP_QUADVARTERM* term = &quadterms[i];
 
          if( ! SCIPisZero(scip, term->lincoef) || SCIPisNegative(scip, term->sqrcoef) )
          {
@@ -3254,34 +3254,51 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
    quadterms = SCIPgetQuadVarTermsQuadratic(scip, cons);
    assert( quadterms != NULL );
 
-   if( ! SCIPisInfinity(scip, SCIPgetRhsQuadratic(scip, cons)) )
+   if( !SCIPisInfinity(scip, SCIPgetRhsQuadratic(scip, cons)) )
    {
       /* try whether constraint on right hand side is SOC */
       lhsconstant = -SCIPgetRhsQuadratic(scip, cons);
 
-      for( i = 0; i < nquadvars; ++i )
+      for( i = 0; i < nquadvars + nbinlin; ++i )
       {
-         term = &quadterms[i];
+         SCIP_Real sqrcoef;
+         SCIP_Real lincoef;
+         SCIP_VAR* var;
+
+         if( i < nquadvars )
+         {
+            SCIP_QUADVARTERM* term = &quadterms[i];
+
+            sqrcoef = term->sqrcoef;
+            lincoef = term->lincoef;
+            var = term->var;
+         }
+         else
+         {
+            sqrcoef = SCIPgetCoefsLinearVarsQuadratic(scip, cons)[i-nquadvars];
+            lincoef = 0.0;
+            var = SCIPgetLinearVarsQuadratic(scip, cons)[i-nquadvars];
+         }
 
          /* skip terms with 0 coefficients */
-         if ( SCIPisZero(scip, term->sqrcoef) )
+         if( sqrcoef == 0.0 )
             continue;
 
-         if( term->sqrcoef > 0.0 )
+         if( sqrcoef > 0.0 )
          {
-            if( lhscount >= nquadvars - 1 )
+            if( lhscount >= nbinlin + nquadvars - 1 )
             { /* too many variables on lhs, i.e., all variables seem to have positive coefficient */
                rhsvar = NULL;
                break;
             }
 
-            lhsvars[lhscount]  = term->var;
-            lhscoefs[lhscount] = sqrt(term->sqrcoef);
+            lhsvars[lhscount]  = var;
+            lhscoefs[lhscount] = sqrt(sqrcoef);
 
-            if( term->lincoef != 0.0 )
+            if( lincoef != 0.0 )
             {
-               lhsoffsets[lhscount] = term->lincoef / (2 * term->sqrcoef);
-               lhsconstant -= term->lincoef * term->lincoef / (4 * term->sqrcoef);
+               lhsoffsets[lhscount] = lincoef / (2.0 * sqrcoef);
+               lhsconstant -= lincoef * lincoef / (4.0 * sqrcoef);
             }
             else
             {
@@ -3291,29 +3308,34 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
             ++lhscount;
          }
          else if( rhsvar != NULL ||
-               (SCIPisLT(scip, SCIPcomputeVarLbGlobal(scip, term->var), -term->lincoef / (2 * term->sqrcoef))
-                && SCIPisGT(scip, SCIPcomputeVarUbGlobal(scip, term->var), -term->lincoef / (2 * term->sqrcoef))) )
+               (SCIPisLT(scip, SCIPcomputeVarLbGlobal(scip, var), -lincoef / (2.0 * sqrcoef)) &&
+                SCIPisGT(scip, SCIPcomputeVarUbGlobal(scip, var), -lincoef / (2.0 * sqrcoef))) )
          { /* second variable with negative coefficient -> cannot be SOC */
             /* or rhs side changes sign */
             rhsvar = NULL;
             break;
          }
+         else if( SCIPvarIsBinary(var) )
+         {
+            /* binary variable on rhs? then we originally had a convex quadratic */
+            break;
+         }
          else
          {
-            rhsvar       = term->var;
-            rhsoffset    = term->lincoef / (2 * term->sqrcoef);
-            lhsconstant -= term->lincoef * term->lincoef / (4 * term->sqrcoef);
+            rhsvar       = var;
+            rhsoffset    = lincoef / (2.0 * sqrcoef);
+            lhsconstant -= lincoef * lincoef / (4.0 * sqrcoef);
 
-            if( SCIPisGE(scip, SCIPcomputeVarLbGlobal(scip, term->var), -term->lincoef / (2*term->sqrcoef)) )
-               rhscoef = sqrt(-term->sqrcoef);
+            if( SCIPisGE(scip, SCIPcomputeVarLbGlobal(scip, var), -lincoef / (2.0 * sqrcoef)) )
+               rhscoef = sqrt(-sqrcoef);
             else
-               rhscoef = -sqrt(-term->sqrcoef);
+               rhscoef = -sqrt(-sqrcoef);
          }
       }
    }
 
    /* treat hyberbolic case */
-   if ( nbilinterms == 1 )
+   if( nbilinterms == 1 && nbinlin == 0 )
    {
       char name[SCIP_MAXSTRLEN];
       SCIP_VAR* auxvarsum;
@@ -3398,7 +3420,7 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
       SCIPdebugPrintCons(scip, upgdconss[0], NULL);
 
       /* create constraint that is equal to cons except that rhs is now infinity */
-      if( ! SCIPisInfinity(scip, -SCIPgetLhsQuadratic(scip, cons)) )
+      if( !SCIPisInfinity(scip, -SCIPgetLhsQuadratic(scip, cons)) )
       {
          SCIP_CALL( SCIPcreateConsQuadratic2(scip, &upgdconss[1], SCIPconsGetName(cons),
                SCIPgetNLinearVarsQuadratic(scip, cons), SCIPgetLinearVarsQuadratic(scip, cons), SCIPgetCoefsLinearVarsQuadratic(scip, cons),
@@ -3462,31 +3484,48 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
 
       lhsconstant = SCIPgetLhsQuadratic(scip, cons);
 
-      for( i = 0; i < nquadvars; ++i )
+      for( i = 0; i < nquadvars + nbinlin; ++i )
       {
-         term = &SCIPgetQuadVarTermsQuadratic(scip, cons)[i];
+         SCIP_Real sqrcoef;
+         SCIP_Real lincoef;
+         SCIP_VAR* var;
+
+         if( i < nquadvars )
+         {
+            SCIP_QUADVARTERM* term = &quadterms[i];
+
+            sqrcoef = term->sqrcoef;
+            lincoef = term->lincoef;
+            var = term->var;
+         }
+         else
+         {
+            sqrcoef = SCIPgetCoefsLinearVarsQuadratic(scip, cons)[i-nquadvars];
+            lincoef = 0.0;
+            var = SCIPgetLinearVarsQuadratic(scip, cons)[i-nquadvars];
+         }
 
          /* if there is a linear variable that is still considered as quadratic (constraint probably not presolved yet),
           * then give up
           */
-         if( term->sqrcoef == 0.0 )
+         if( sqrcoef == 0.0 )
             goto cleanup;
 
-         if( term->sqrcoef < 0.0 )
+         if( sqrcoef < 0.0 )
          {
-            if( lhscount >= nquadvars - 1 )
+            if( lhscount >= nquadvars + nbinlin - 1 )
             { /* too many variables on lhs, i.e., all variables seem to have negative coefficient */
                rhsvar = NULL;
                break;
             }
 
-            lhsvars[lhscount]  = term->var;
-            lhscoefs[lhscount] = sqrt(-term->sqrcoef);
+            lhsvars[lhscount]  = var;
+            lhscoefs[lhscount] = sqrt(-sqrcoef);
 
-            if( term->lincoef != 0.0 )
+            if( lincoef != 0.0 )
             {
-               lhsoffsets[lhscount] = term->lincoef / (2 * term->sqrcoef);
-               lhsconstant += term->lincoef * term->lincoef / (4 * term->sqrcoef);
+               lhsoffsets[lhscount] = lincoef / (2.0 * sqrcoef);
+               lhsconstant += lincoef * lincoef / (4.0 * sqrcoef);
             }
             else
             {
@@ -3496,27 +3535,32 @@ SCIP_DECL_QUADCONSUPGD(upgradeConsQuadratic)
             ++lhscount;
          }
          else if( rhsvar != NULL ||
-               (SCIPisLT(scip, SCIPcomputeVarLbGlobal(scip, term->var), -term->lincoef / (2 * term->sqrcoef))
-                && SCIPisGT(scip, SCIPcomputeVarUbGlobal(scip, term->var), -term->lincoef / (2 * term->sqrcoef))) )
+               (SCIPisLT(scip, SCIPcomputeVarLbGlobal(scip, var), -lincoef / (2.0 * sqrcoef))
+                && SCIPisGT(scip, SCIPcomputeVarUbGlobal(scip, var), -lincoef / (2.0 * sqrcoef))) )
          { /* second variable with positive coefficient -> cannot be SOC */
             /* or rhs side changes sign */
             rhsvar = NULL;
             break;
          }
+         else if( SCIPvarIsBinary(var) )
+         {
+            /* binary variable on rhs? then we originally had a convex quadratic */
+            break;
+         }
          else
          {
-            rhsvar       = term->var;
-            rhsoffset    = term->lincoef / (2 * term->sqrcoef);
-            lhsconstant += term->lincoef * term->lincoef / (4 * term->sqrcoef);
+            rhsvar       = var;
+            rhsoffset    = lincoef / (2.0 * sqrcoef);
+            lhsconstant += lincoef * lincoef / (4.0 * sqrcoef);
 
-            if( SCIPisGE(scip, SCIPcomputeVarLbGlobal(scip, term->var), -term->lincoef / (2*term->sqrcoef)) )
-               rhscoef = sqrt(term->sqrcoef);
+            if( SCIPisGE(scip, SCIPcomputeVarLbGlobal(scip, var), -lincoef / (2.0 * sqrcoef)) )
+               rhscoef = sqrt(sqrcoef);
             else
-               rhscoef = -sqrt(term->sqrcoef);
+               rhscoef = -sqrt(sqrcoef);
          }
       }
 
-      if( rhsvar && lhscount >= 2 && !SCIPisNegative(scip, lhsconstant) )
+      if( rhsvar != NULL && lhscount >= 2 && !SCIPisNegative(scip, lhsconstant) )
       { /* found SOC constraint, so upgrade to SOC constraint(s) (below) and relax left hand side */
          SCIPdebugMsg(scip, "found left hand side of constraint <%s> to be SOC\n", SCIPconsGetName(cons));
 
@@ -3595,7 +3639,7 @@ GENERALUPG:
    /* set lower triangular entries of A corresponding to square terms */
    for( i = 0; i < nquadvars; ++i )
    {
-      term = &SCIPgetQuadVarTermsQuadratic(scip, cons)[i];
+      SCIP_QUADVARTERM* term = &SCIPgetQuadVarTermsQuadratic(scip, cons)[i];
 
       /* skip upgrade if fixed (or (multi)aggregated) variables and still in fast presolving
        * probably cons_quadratic did not yet had the chance to remove/replace this variable (see also #2352)
@@ -3641,7 +3685,7 @@ GENERALUPG:
    {
       for( j = 0; j < nquadvars; ++j )
       {
-         term = &SCIPgetQuadVarTermsQuadratic(scip, cons)[j];
+         SCIP_QUADVARTERM* term = &SCIPgetQuadVarTermsQuadratic(scip, cons)[j];
          bp[i] += term->lincoef * a[i * nquadvars + j];
       }
 
