@@ -65,6 +65,7 @@ Features
 - The OSiL reader now supports nonlinear expressions of type "signpower".
 - Expressions of form abs(x)^p * x in a nonlinear constraint are now sometimes recognized and handled by abspower constraints.
 
+- handle linear binary variables as if squared in simple upgrade from quadratic to second-order cone constraints
 
 Performance improvements
 ------------------------
